fix spacing if media query fails

--- a/css/base.css
+++ b/css/base.css
@@ -343,6 +343,7 @@ p.shortbio {
 	margin-bottom: 300px;
 	width: 490px;
 	height: 330px;
+	margin-top: 28%;
     }
 
     p.intro {
